# libs/nsv-common/src/dto/response/pagination.dto.ts
@@ -15,12 +15,25 @@ class PaginationMetaDto {
   limit!: number;
 }
 
-export class PaginatedResponseDto<T> {
-  @Expose()
-  @Type(() => Object)
-  data: T[];
+// export class PaginatedResponseDto<T> {
+//   @Expose()
+//   data: T[];
 
-  @Expose()
-  @Type(() => PaginationMetaDto)
-  pagination: PaginationMetaDto;
+//   @Expose()
+//   @Type(() => PaginationMetaDto)
+//   pagination: PaginationMetaDto;
+// }
+
+export function PaginatedResponseDto<T extends Object>(ItemDto: T) {
+  class PaginatedResponseDtoClass {
+    @Expose()
+    @Type(() => ItemDto as any)
+    data: T[];
+
+    @Expose()
+    @Type(() => PaginationMetaDto)
+    pagination: PaginationMetaDto;
+  }
+
+  return PaginatedResponseDtoClass;
 }
